# MyHandler

./: Makefile  README.md  handler_api.c  mk.sh
CAgentIoT3.2/: Makefile.am  mk.sh  (+1 more)
CAgentIoT3.2/myTest/: BasicFun_Tool.c  BasicSocketFunc.c  Makefile.am  common.h  mqtt_sub.conf
CAgentIoT3.2/myTest/inc/AdvApiMux/: AdvAPIMuxServer.h
WISE_IOT/NetDevice/DustWsnDriver/TestApp/: DustWsnDrv_test.c  DustWsnDrv_test.h  Makefile.am  Makefile.in
WISE_IOT/NetDevice/DustWsnDriver/adv_coaplib/: Makefile  Makefile.am  Makefile.in  adv_coap.c  adv_coap.h  adv_payload_parser.c  adv_payload_parser.h  ipso_id.h  libAdvCoapLib.la  libAdvCoapLib_la-adv_coap.lo  libAdvCoapLib_la-adv_payload_parser.lo  uri_cmd.h
WISE_IOT/NetDevice/DustWsnDriver/adv_coaplib/.deps/: libAdvCoapLib_la-adv_coap.Plo  libAdvCoapLib_la-adv_payload_parser.Plo
WISE_IOT/NetDevice/DustWsnDriver/adv_coaplib/.libs/: libAdvCoapLib.la
WISE_IOT/NetDevice/DustWsnDriver/adv_coaplib/ini/: 3200.ini  3201.ini  3202.ini  3301.ini  3303.ini  3304.ini  3313.ini  3314.ini  9002.ini  9200.ini  Makefile  Makefile.am  Makefile.in
WISE_IOT/NetDevice/DustWsnDriver/adv_coaplib/testapp/: 3303parser  Makefile  Makefile.am  Makefile.in  test_coap  test_coap.c  test_observe  test_observe.c
WISE_IOT/NetDevice/DustWsnDriver/ipmg/: DustWsnDrv.c  DustWsnDrv.h  IpMgWrapper.c  IpMgWrapper.h  Makefile  Makefile.am  Makefile.in  MoteListAccess.c  MoteListAccess.h  libDustWsnDrv.la  libDustWsnDrv2.la  libDustWsnDrv2_la-DustWsnDrv.lo  libDustWsnDrv2_la-IpMgWrapper.lo  libDustWsnDrv2_la-MoteListAccess.lo  libDustWsnDrv2_la-rs232.lo  libDustWsnDrv_la-DustWsnDrv.lo  libDustWsnDrv_la-IpMgWrapper.lo  libDustWsnDrv_la-MoteListAccess.lo  libDustWsnDrv_la-rs232.lo  rs232.c  rs232.h
WISE_IOT/NetDevice/DustWsnDriver/ipmg/.deps/: libDustWsnDrv2_la-DustWsnDrv.Plo  libDustWsnDrv2_la-IpMgWrapper.Plo  libDustWsnDrv2_la-MoteListAccess.Plo  libDustWsnDrv2_la-rs232.Plo  libDustWsnDrv_la-DustWsnDrv.Plo  libDustWsnDrv_la-IpMgWrapper.Plo  libDustWsnDrv_la-MoteListAccess.Plo  libDustWsnDrv_la-rs232.Plo
WISE_IOT/NetDevice/DustWsnDriver/ipmg/.libs/: libDustWsnDrv.la  libDustWsnDrv.lai  libDustWsnDrv.so.1  libDustWsnDrv.so.1.0.0  libDustWsnDrv.so.1.0.0T  libDustWsnDrv2.la  libDustWsnDrv2.lai  libDustWsnDrv2.so.1.0.0  libDustWsnDrv2.so.1.0.0T
WISE_IOT/NetDevice/DustWsnDriver/serialmuxclient/: Makefile  Makefile.am  Makefile.in  dn_ipmg.c  dn_ipmg.lo  dn_serial_mg.c  dn_socket.h  libserialmuxclient.la  serialmux.c  serialmux.h  serialmux.lo
WISE_IOT/NetDevice/DustWsnDriver/serialmuxclient/.deps/: dn_ipmg.Plo  dn_serial_mg.Plo  serialmux.Plo
WISE_IOT/NetDevice/DustWsnDriver/serialmuxclient/.libs/: libserialmuxclient.la
WISE_IOT/NetDevice/DustWsnDriver/sm_clib/: Makefile  Makefile.am  Makefile.in  dn_hdlc.lo  dn_ipmg.c  dn_ipmt.lo  dn_serial_mg.lo  dn_serial_mt.lo  dn_whmt.c  dn_whmt.lo  libsm_clib.la
WISE_IOT/NetDevice/DustWsnDriver/sm_clib/.deps/: dn_hdlc.Plo  dn_ipmg.Plo  dn_ipmt.Plo  dn_serial_mg.Plo  dn_serial_mt.Plo  dn_whmt.Plo
WISE_IOT/NetDevice/DustWsnDriver/sm_clib/.libs/: libsm_clib.la
WISE_IOT/NetDevice/MoteSim/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  svnmessage.txt
WISE_IOT/NetDevice/MoteSim/autom4te.cache/: output.0  requests  traces.0
WISE_IOT/NetDevice/MoteSim/data/: Makefile  Makefile.am  Makefile.in
WISE_IOT/NetDevice/MoteSim/doc/: MoteSimulator.docx  MoteSimulator.pptx
WISE_IOT/NetDevice/MoteSim/include/: Makefile  Makefile.am  Makefile.in  TopologyTranslate.h
WISE_IOT/NetDevice/MoteSim/include/internal/: SimuParser.h  SimuTools.h  WSNType.h  platform.h
WISE_IOT/NetDevice/MoteSim/libs/: Makefile  Makefile.am  Makefile.in  SensorNetwork_API.cpp  SensorNetwork_API.lo  SimuParser.cpp  SimuParser.lo  SimuTools.cpp  SimuTools.lo  TopologyTranslate.cpp  TopologyTranslate.lo  libMoteSim.la  libTopology.la
WISE_IOT/NetDevice/MoteSim/libs/.deps/: SensorNetwork_API.Plo  SimuParser.Plo  SimuTools.Plo  TopologyTranslate.Plo
WISE_IOT/NetDevice/MoteSim/libs/.libs/: libMoteSim.la  libMoteSim.lai  libMoteSim.so.1  libMoteSim.so.1.0.0  libMoteSim.so.1.0.0T  libTopology.la  libTopology.lai  libTopology.so.1  libTopology.so.1.0.0  libTopology.so.1.0.0T
WISE_IOT/NetDevice/MoteSim/project/: MoteManSim.project  MoteManSim.workspace
WISE_IOT/NetDevice/MoteSim/src/: Makefile  Makefile.am  Makefile.in  MoteManagerSimulator.cpp  MoteSim  test  test.cpp
WISE_IOT/NetDevice/MoteSim/src/.deps/: MoteManagerSimulator.Po  test.Po
WISE_IOT/NetDevice/MoteSim/src/.libs/: MoteSim  test
WISE_IOT/NetDevice/Mqtt/src/: Makefile  Makefile.am  Makefile.in  MqttHal.c  libMqttDrv.la  libMqttDrv_la-DataProc.lo  libMqttDrv_la-MqttHal.lo  libMqttDrv_la-SensorNetwork_API.lo  libMqttDrv_la-list.lo  libMqttDrv_la-mqtt_client_shared.lo
WISE_IOT/NetDevice/Mqtt/src/.deps/: libMqttDrv_la-DataProc.Plo  libMqttDrv_la-MqttHal.Plo  libMqttDrv_la-SensorNetwork_API.Plo  libMqttDrv_la-list.Plo  libMqttDrv_la-mqtt_client_shared.Plo
WISE_IOT/NetDevice/Mqtt/src/.libs/: libMqttDrv.la  libMqttDrv.lai  libMqttDrv.so.1.0.0
WISE_IOT/Tools/AdvJSON/: Makefile  Makefile.in  aclocal.m4  advJSON.pc  config.h  config.status  configure  configure.ac  libtool
WISE_IOT/Tools/AdvJSON/autom4te.cache/: output.0  requests  traces.0
WISE_IOT/Tools/AdvJSON/inc/: AdvJSON.h  AdvJSONParallel.h  jsontype.h
WISE_IOT/Tools/AdvJSON/sample/: Makefile  Makefile.in  test  testc
WISE_IOT/Tools/AdvJSON/sample/.deps/: test.Po  testc.Po
WISE_IOT/Tools/AdvJSON/src/: AdvCJSON.c  AdvCollection.lo  AdvJSON.cpp  AdvJSON.lo  AdvVariousType.lo  Makefile  Makefile.am  Makefile.in  jsonparser.c  jsontool.c  libAdvCJSON.la  libAdvCJSON_la-AdvCJSON.lo  libAdvCJSON_la-jsoncollection.lo  libAdvCJSON_la-jsoncreator.lo  libAdvCJSON_la-jsonparser.lo  libAdvCJSON_la-jsonprint.lo  libAdvCJSON_la-jsonrule.lo  libAdvCJSON_la-jsontool.lo  libAdvJSON.la  libAdvJSON_la-AdvCJSON.lo  libAdvJSON_la-jsoncollection.lo  libAdvJSON_la-jsoncreator.lo  libAdvJSON_la-jsonparser.lo  libAdvJSON_la-jsonprint.lo  libAdvJSON_la-jsonrule.lo  libAdvJSON_la-jsontool.lo
(+227 files in other folders)
