noinst_LTLIBRARIES = libserialmuxclient.la

libserialmuxclient_la_SOURCES = dn_clib_build.h \
                        dn_clib_version.h \
                        dn_common.h \
                        dn_endianness.h \
                        dn_ipmg.c \
                        dn_ipmg.h \
                        dn_lock.h \
                        dn_serial_mg.c \
                        dn_serial_mg.h \
                        dn_socket.h \
                        serialmux.c \
                        serialmux.h
