noinst_LTLIBRARIES = libsm_clib.la

libsm_clib_la_SOURCES = dn_hdlc.c \
                        dn_ipmg.c \
                        dn_ipmt.c \
                        dn_serial_mg.c \
                        dn_serial_mt.c \
                        dn_whmt.c \
                        dn_clib_build.h \
                        dn_clib_version.h \
                        dn_common.h \
                        dn_endianness.h \
                        dn_hdlc.h \
                        dn_ipmt.h \
                        dn_lock.h \
                        dn_serial_mt.h \
                        dn_whmt.h

include_HEADERS = dn_ipmg.h \
                  dn_uart.h \
                  dn_serial_mg.h
