LDADD = ../libs/libMoteSim.la ../libs/libTopology.la ../../../Tools/AdvLog/src/libAdvLog.la ../../../Tools/AdvJSON/src/libAdvJSON.la
AM_CFLAGS = -I../include -I../../../Tools/AdvLog/include -I../../../inc
AM_CXXFLAGS = -I../include -I../../../Tools/AdvLog/include -I../../../inc

bin_PROGRAMS = test MoteSim
test_SOURCES = test.cpp
MoteSim_SOURCES = MoteManagerSimulator.cpp
